--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-image: url("https://source.unsplash.com/iOiaqY7eZsY/1600x900");
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+canvas {
+  z-index: 10;
+}
+
+.text {
+  text-align: center;
+  color: #ffffff6b;
+  font-size: 28px;
+  width: 100%;
+  top: 130px;
+  position: absolute;
+  margin: 0 auto;
+  display: block;
 }
