--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 body {
   background-image: url("https://source.unsplash.com/iOiaqY7eZsY/1600x900");
   background-size: cover;
+  background-position: center top;
+  background-repeat: no-repeat;
   height: 100vh;
   width: 100vw;
 }
